load data riwayat

--- a/app/src/main/res/layout/fragment_order_complete.xml
+++ b/app/src/main/res/layout/fragment_order_complete.xml
@@ -7,7 +7,7 @@
 
     <!-- TODO: Update blank fragment layout -->
     <LinearLayout
-        android:id="@+id/intro"
+        android:id="@+id/introC"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
@@ -46,5 +46,11 @@
             tools:ignore="HardcodedText" />
 
     </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_riwayat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:listitem="@layout/item_row_order_success"/>
 
 </FrameLayout>
