--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -110,6 +110,9 @@
     <Button
         android:id="@+id/btn_register"
         style="@style/button_red"
+        android:textColor="@color/White"
+        android:fontFamily="@font/medium"
+        android:text="Daftar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
