--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -18,7 +18,7 @@
             android:id="@+id/view1"
             android:layout_width="match_parent"
             android:layout_height="55dp"
-            android:background="@color/White"
+            android:background="@color/Red"
             android:elevation="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -27,13 +27,13 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
+                android:layout_gravity="center"
                 android:layout_marginStart="20dp"
                 android:layout_marginBottom="2dp"
                 android:fontFamily="@font/medium"
                 android:elevation="2dp"
                 android:text="@string/profile_detail"
-                android:textColor="@android:color/black"
+                android:textColor="@android:color/white"
                 android:textSize="20sp"
                 android:textStyle="bold" />
         </LinearLayout>
