pembaharuan tampilan detail menu dan list menu

--- a/app/src/main/res/layout/activity_delivery_location.xml
+++ b/app/src/main/res/layout/activity_delivery_location.xml
@@ -140,6 +140,7 @@
                         android:background="@drawable/bg_waktu_nonaktif"
                         android:fontFamily="@font/medium"
                         android:hint="087788661921"
+                        android:maxLength="12"
                         android:inputType="number"
                         android:lines="1"
                         android:textSize="17sp"
