pembaharuan tampilan detail menu dan list menu

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -75,6 +75,7 @@
     <Button
         android:id="@+id/btn_login"
         style="@style/button_red"
+        android:text="Masuk"
         android:textColor="@android:color/white"
         android:fontFamily="@font/medium"
         android:textSize="18sp"
