--- a/app/src/main/res/layout-normal-notlong/activity_detail_menu.xml
+++ b/app/src/main/res/layout-normal-notlong/activity_detail_menu.xml
@@ -123,6 +123,7 @@
             android:id="@+id/cardView4"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:layout_weight="1">
             <RelativeLayout
@@ -237,7 +238,6 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginStart="10dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginEnd="10dp"
                         android:orientation="vertical">
@@ -245,14 +245,14 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Keterangan : "
-                            android:textSize="16dp"
-                            android:layout_marginLeft="10dp"
+                            android:textSize="16sp"
+                            android:layout_marginStart="10dp"
                             android:textColor="@android:color/black" />
                         <TextView
                             android:id="@+id/text_keterangan_menu"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"
+                            android:layout_marginStart="10dp"
                             android:layout_marginBottom="5dp"
                             android:text="Isi Keterangan" />
                     </LinearLayout>
@@ -390,20 +390,18 @@
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_alignParentEnd="true"
-                            android:layout_marginEnd="95dp"
-                            android:layout_toEndOf="@+id/bayar"
-                            android:gravity="right">
-
+                            android:gravity="right"
+                            android:layout_marginEnd="15dp"
+                            android:layout_toEndOf="@+id/bayar">
                             <Button
                                 android:id="@+id/btn_chart"
-                                android:layout_width="150dp"
+                                android:layout_width="200dp"
                                 android:layout_height="50dp"
                                 android:background="@drawable/btn_orange"
                                 android:text="Masuk Keranjang"
                                 android:textAllCaps="false"
                                 android:textColor="@color/White"
-                                android:textSize="14sp" />
+                                android:textSize="18sp"/>
                         </LinearLayout>
                     </RelativeLayout>
                 </LinearLayout>
