--- a/app/src/main/res/layout/activity_detail_menu.xml
+++ b/app/src/main/res/layout/activity_detail_menu.xml
@@ -238,7 +238,6 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginStart="10dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginEnd="10dp"
                         android:orientation="vertical">
@@ -246,14 +245,14 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Keterangan : "
-                            android:textSize="16dp"
-                            android:layout_marginLeft="10dp"
+                            android:textSize="16sp"
+                            android:layout_marginStart="10dp"
                             android:textColor="@android:color/black" />
                         <TextView
                             android:id="@+id/text_keterangan_menu"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"
+                            android:layout_marginStart="10dp"
                             android:layout_marginBottom="5dp"
                             android:text="Isi Keterangan" />
                     </LinearLayout>
