--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -110,9 +110,12 @@
     <Button
         android:id="@+id/btn_register"
         style="@style/button_red"
-        android:textColor="@color/White"
+        android:layout_height="55dp"
+        android:layout_width="250dp"
+        android:layout_marginBottom="35dp"
         android:fontFamily="@font/medium"
         android:text="Daftar"
+        android:textColor="@color/White"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
