--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -121,6 +121,7 @@
                         tools:ignore="RtlHardcoded,UseCompoundDrawables,UselessParent">
 
                         <Button
+                            android:id="@+id/btn_top_up"
                             android:layout_width="50dp"
                             android:layout_height="20dp"
                             android:layout_gravity="center"
@@ -498,6 +499,7 @@
 
                 <HorizontalScrollView
                     android:id="@+id/disc"
+                    android:scrollbars="none"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/tv_promo">
