--- a/app/src/main/res/layout-small/fragment_account.xml
+++ b/app/src/main/res/layout-small/fragment_account.xml
@@ -238,6 +238,7 @@
                 android:background="#EDEDED" />
 
             <LinearLayout
+                android:id="@+id/rateMe"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:gravity="center_vertical"
