--- a/app/src/main/res/layout-hdpi/fragment_account.xml
+++ b/app/src/main/res/layout-hdpi/fragment_account.xml
@@ -11,7 +11,11 @@
         android:id="@+id/linearLayout4"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:id="@+id/view1"
@@ -106,6 +110,9 @@
             android:background="@color/White_monotone"
             android:visibility="gone" />
 
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -254,7 +261,7 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="15dp"
                     android:fontFamily="@font/medium"
-                    android:text="Rate Nusa Licious"
+                    android:text="Rate Nusalicious"
                     android:textColor="#4F5052"
                     android:textSize="19sp" />
             </LinearLayout>
@@ -304,7 +311,7 @@
 
 
         </LinearLayout>
-
+        </ScrollView>
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
