--- a/app/src/main/res/layout-xhdpi/fragment_account.xml
+++ b/app/src/main/res/layout-xhdpi/fragment_account.xml
@@ -106,6 +106,11 @@
             android:background="@color/White_monotone"
             />
 
+        <ScrollView
+            android:scrollbars="none"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -240,6 +245,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:gravity="center_vertical"
+                android:id="@+id/rateMe"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -304,7 +310,7 @@
 
 
         </LinearLayout>
-
+        </ScrollView>
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
