--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -237,6 +237,7 @@
                 android:background="#EDEDED" />
 
             <LinearLayout
+                android:id="@+id/rateMe"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:gravity="center_vertical"
