update menu home

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -42,7 +42,7 @@
     <color name="Green_natural">#00DC02</color>
 
     <!-- Custom Color Blue -->
-    <color name="gradient_end_color">#18a3fe</color>
+    <color name="gradient_end_color">#002137</color>
 
 
 
