--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,53 +10,30 @@
         android:id="@+id/imageView2"
         android:layout_width="350dp"
         android:layout_height="350dp"
+        android:contentDescription="@string/todo"
         android:src="@drawable/welcome"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="@string/todo" />
-
-    <TextView
-        android:id="@+id/textView"
-        style="@style/welcome"
-        android:textSize="28sp"
-        android:textColor="@color/welcome_register"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView4"
-        android:layout_marginTop="20sp"
-        android:fontFamily="@font/aquire"
-        android:text="NUSA"
+        android:id="@+id/textView"
+        style="@style/welcome"
         android:textColor="@color/welcome_register"
-        android:textSize="34sp"
+        android:textSize="28sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="25dp"
+        android:src="@drawable/logonusa"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/aquire"
-        android:text="LICIOUS"
-        android:textColor="@color/welcome_register"
-        android:textSize="28sp"
-        app:layout_constraintEnd_toEndOf="@+id/textView4"
-        app:layout_constraintStart_toStartOf="@+id/textView4"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
-    <!--    <ImageView-->
-<!--        android:layout_width="100dp"-->
-<!--        android:layout_height="100dp"-->
-<!--        android:src="@drawable/logonusa"-->
-<!--        android:layout_marginTop="25dp"-->
-<!--        app:layout_constraintEnd_toEndOf="@+id/textView"-->
-<!--        app:layout_constraintStart_toStartOf="@+id/textView"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/imageView2" />-->
+        tools:ignore="ContentDescription" />
 
     <Button
         android:id="@+id/btn_login"
