--- a/app/src/main/res/layout-hdpi/fragment_account.xml
+++ b/app/src/main/res/layout-hdpi/fragment_account.xml
@@ -58,14 +58,14 @@
                 android:layout_marginTop="5dp"
                 android:src="@drawable/gw" />
 
-            <Button
-                android:id="@+id/btnEdit"
-                android:layout_width="80dp"
-                android:layout_height="20dp"
-                android:layout_marginLeft="315dp"
-                android:background="@color/Pink"
-                android:text="Edit"
-                android:textColor="@android:color/white" />
+<!--            <Button-->
+<!--                android:id="@+id/btnEdit"-->
+<!--                android:layout_width="80dp"-->
+<!--                android:layout_height="20dp"-->
+<!--                android:layout_marginLeft="315dp"-->
+<!--                android:background="@color/Pink"-->
+<!--                android:text="Edit"-->
+<!--                android:textColor="@android:color/white" />-->
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -151,6 +151,7 @@
                 android:background="#EDEDED" />
 
             <LinearLayout
+                android:id="@+id/customer_service"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:gravity="center_vertical"
@@ -182,6 +183,7 @@
                 android:background="#EDEDED" />
 
             <LinearLayout
+                android:id="@+id/term_condition"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:gravity="center_vertical"
